cloud_formation/hw-vpc.template
{
	"AWSTemplateFormatVersion": "2010-09-09",

	"Resources": {
	
		"HomeworkVPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.12.0.0/23"
			}
		},

		"HomeworkSubnet": {
			"Type": "AWS::EC2::Subnet",
			"DependsOn": ["HomeworkVPC"],
			"Properties": {
				"VpcId": { "Ref": "HomeworkVPC" },
				"AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ] },
				"CidrBlock": "10.12.0.0/24",
				"MapPublicIpOnLaunch": "True"
			}
		},

		"HomeworkSubnet2": {
			"Type": "AWS::EC2::Subnet",
			"DependsOn": ["HomeworkVPC"],
			"Properties": {
				"VpcId": { "Ref": "HomeworkVPC" },
				"AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": { "Ref": "AWS::Region" } } ] },
				"CidrBlock": "10.12.1.0/24",
				"MapPublicIpOnLaunch": "True"
			}
		},

		"RouteTable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": { "Ref": "HomeworkVPC" }
			}
		},

		"VPCDefaultRoute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": { "Ref": "RouteTable1" },
				"GatewayId": { "Ref": "IGW1" },
				"DestinationCidrBlock": "0.0.0.0/0"
			}
		},

		"RTableAss": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": { "Ref": "RouteTable1" },
				"SubnetId": { "Ref": "HomeworkSubnet" }
			}
		},

		"RTableAss2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"RouteTableId": { "Ref": "RouteTable1" },
				"SubnetId": { "Ref": "HomeworkSubnet2" }
			}
		},

		"IGW1": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {}
		},

		"IGWAttachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"InternetGatewayId": { "Ref": "IGW1" },
				"VpcId": { "Ref": "HomeworkVPC" }
			}
		},

		"NetAcl1": {
			"Type": "AWS::EC2::NetworkAcl",
			"Properties": {
				"VpcId": { "Ref": "HomeworkVPC" }
			}
		},

		"NetAclEntryEgress": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": { "Ref": "NetAcl1" },
				"CidrBlock": "0.0.0.0/0",
				"Egress": "True",
				"Protocol": "-1",
				"RuleAction": "Allow",
				"RuleNumber": "100"
			}
		},

		"NetAclEntryIngress": {
			"Type": "AWS::EC2::NetworkAclEntry",
			"Properties": {
				"NetworkAclId": {
					"Ref": "NetAcl1"
				},
				"CidrBlock": "0.0.0.0/0",
				"Egress": "False",
				"Protocol": "-1",
				"RuleAction": "Allow",
				"RuleNumber": "100"
			}
		},

		"AclAssoc": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": { "Ref": "HomeworkSubnet" },
				"NetworkAclId": { "Ref": "NetAcl1" }
			}
		},

		"AclAssoc2": {
			"Type": "AWS::EC2::SubnetNetworkAclAssociation",
			"Properties": {
				"SubnetId": { "Ref": "HomeworkSubnet2" },
				"NetworkAclId": { "Ref": "NetAcl1" }
			}
		},

		"SecGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupName": { "Fn::Sub": "Homework-VPC-SG-${AWS::StackName}" },
				"GroupDescription": "Homework VPC Sec group",
				"SecurityGroupIngress": [{
						"CidrIp": "0.0.0.0/0",
						"FromPort": "22",
						"ToPort": "22",
						"IpProtocol": "tcp"
					}, {
						"SourceSecurityGroupId": { "Ref": "ELBSecGroup" },
						"FromPort": "80",
						"ToPort": "80",
						"IpProtocol": "tcp"
					}
				],
				"VpcId": { "Ref": "HomeworkVPC" },
				"Tags": [{
						"Key": "Name",
						"Value": { "Fn::Sub": "Homework-VPC-SG-${AWS::StackName}" }
					}
				]
			}
		},

		"ELBSecGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupName": { "Fn::Sub": "Homework-VPC-ELB-SG-${AWS::StackName}" },
				"GroupDescription": "Homework VPC Sec group for ELB",
				"SecurityGroupIngress": [{
						"CidrIp": "0.0.0.0/0",
						"FromPort": "80",
						"ToPort": "80",
						"IpProtocol": "tcp"
					}
				],
				"VpcId": { "Ref": "HomeworkVPC" },
				"Tags": [{
						"Key": "Name",
						"Value": { "Fn::Sub": "Homework-VPC-SG-${AWS::StackName}" }
					}
				]
			}
		}
	},

	"Outputs": {
	
		"VpcId": {
			"Value": {
				"Ref": "HomeworkVPC"
			}
		},

		"SubnetId": {
			"Value": {
				"Ref": "HomeworkSubnet"
			}
		},

		"SubnetId2": {
			"Value": {
				"Ref": "HomeworkSubnet2"
			}
		},

		"SecurityGroupId": {
			"Value": {
				"Ref": "SecGroup"
			}
		},

		"ELBSecurityGroupId": {
			"Value": {
				"Ref": "ELBSecGroup"
			}
		},

		"SubnetAZ": {
			"Value": {
				"Fn::GetAtt": ["HomeworkSubnet", "AvailabilityZone"]
			}
		},

		"SubnetAZ2": {
			"Value": {
				"Fn::GetAtt": ["HomeworkSubnet2", "AvailabilityZone"]
			}
		}
		
	}
}
